Fixed a row alignment issue in danimoth's theme

--- a/i2p2www/static/styles/danimoth.css
+++ b/i2p2www/static/styles/danimoth.css
@@ -237,7 +237,7 @@ display:block;
 
 .row, .aside-wrap {
 zoom:1;
-margin-left:-20px;
+/*margin-left:-20px;*/
 }
 .row:before,.row:after, .aside-wrap:before, .aside-wrap:after {
 display:table;
